--- a/client/src/css/tailwind.css
+++ b/client/src/css/tailwind.css
@@ -6564,7 +6564,7 @@ video {
 }
 
 .font-curly{
-  font-family: Menlo, Chewy, Candara, Verdana;
+  font-family: Chewy, Candara, Verdana;
 }
 
 .font-hairline{
@@ -25106,7 +25106,7 @@ video {
   }
 
   .sm\:font-curly{
-    font-family: Menlo, Chewy, Candara, Verdana;
+    font-family: Chewy, Candara, Verdana;
   }
 
   .sm\:font-hairline{
@@ -43649,7 +43649,7 @@ video {
   }
 
   .md\:font-curly{
-    font-family: Menlo, Chewy, Candara, Verdana;
+    font-family: Chewy, Candara, Verdana;
   }
 
   .md\:font-hairline{
@@ -62192,7 +62192,7 @@ video {
   }
 
   .lg\:font-curly{
-    font-family: Menlo, Chewy, Candara, Verdana;
+    font-family: Chewy, Candara, Verdana;
   }
 
   .lg\:font-hairline{
@@ -80735,7 +80735,7 @@ video {
   }
 
   .xl\:font-curly{
-    font-family: Menlo, Chewy, Candara, Verdana;
+    font-family: Chewy, Candara, Verdana;
   }
 
   .xl\:font-hairline{
